<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app01.myandroid1.Activity_xxkc">
    <!--选修课程-->
    <LinearLayout android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/color1"
        >
        <ImageView
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/t1"
            android:textSize="20sp"
            android:textColor="@color/write"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>
<!--姓名-->
    <LinearLayout
        android:id="@+id/liner2"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@id/linear1"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/t11"
    android:textSize="22sp"
    android:textColor="@color/color1"
    />
        <EditText
            android:layout_height="33dp"
            android:layout_width="150dp"
            android:inputType="text"
            android:padding="5dp"
            android:id="@+id/name"
            android:background="@drawable/xsxx2"/>

    </LinearLayout>

    <!--性别-->
    <LinearLayout
        android:id="@+id/liner3"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/liner2"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t15"
            android:textSize="22sp"
            android:layout_marginEnd="7dp"
            android:textColor="@color/color1"
            />
       <RadioGroup
           android:id="@+id/sex"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <RadioButton
               android:id="@+id/boy"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="36dp"
               android:textSize="20sp"
               android:textColor="@color/color1"
               android:text="@string/t17"/>
           <RadioButton
               android:id="@+id/gril"
               android:layout_width="wrap_content"
               android:textColor="@color/color1"
               android:textSize="20sp"
               android:layout_height="wrap_content"
               android:text="@string/nv"/>


       </RadioGroup>

    </LinearLayout>


    <!---->
    <LinearLayout
        android:id="@+id/liner4"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/liner3"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t16"
            android:textSize="22sp"
            android:textColor="@color/color1"
            />
        <EditText
            android:layout_height="33dp"
            android:layout_width="150dp"
            android:id="@+id/age"
            android:padding="5dp"
            android:inputType="text"
            android:background="@drawable/xsxx2"/>

    </LinearLayout>

    <Button
        android:id="@+id/kcbut"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/t14"
        android:layout_centerHorizontal="true"
        android:textColor="@color/write"
        android:background="@drawable/radius_tcxt"
        android:layout_below="@id/liner4"/>
</RelativeLayout>
