<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app01.myandroid1.Activity_Xxbh">
<!--选修编号-->
    <LinearLayout android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/color1"
        >
        <ImageView
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />
       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/t13"
           android:textSize="20sp"
           android:textColor="@color/write"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="20dp"
           />

    </LinearLayout>
    <ListView
        android:id="@+id/list"
        android:layout_below="@id/linear1"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xxbhbut"
        android:text="@string/t14"
        android:textColor="@color/write"
        android:background="@drawable/radius_tcxt"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/list"/>
</RelativeLayout>
